--- a/css/name.css
+++ b/css/name.css
@@ -53,23 +53,24 @@ body{
   opacity: 0; 
 }
 
-
-
 .main-content{
     background-color: #D6DAC8;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
+    margin-bottom : 20px;
 }
 
 .nav-sites-links {
+    border-bottom: 2px solid #ccc;
     margin:0;
     background-color: #9CAFAA;
     color: #EAD2AC;
     padding: 15px;
     border-radius: 8px;
     margin-bottom: 20px;
+    margin-top:20px;
 }
 
 .nav-sites-links ul {
@@ -173,4 +174,72 @@ body{
 .schedule-table tr:hover {
     background-color: #cce5ff; 
     cursor: pointer;
+}
+
+
+.sites-forms {
+  background: #fff8e1;
+  padding: 25px;
+  border-radius: 12px;
+  max-width: 450px;
+  margin: 20px auto;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.15);
+  font-family: "Poppins", sans-serif;
+}
+
+.form-container h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #ff6f00;
+}
+
+.form-container label {
+  display: block;
+  margin-bottom: 12px;
+  font-weight: bold;
+  color: #444;
+}
+
+.form-container input[type="text"],
+.form-container input[type="email"],
+.form-container input[type="date"],
+.form-container input[type="color"] {
+  width: 70%;              /* не на всю ширину */
+  max-width: 300px;        /* ограничение по размеру */
+  margin: 5px auto 15px;   /* центрирование */
+  display: block;          /* для margin auto */
+  padding: 8px 12px;
+  border: 2px solid #ffb300;
+  border-radius: 8px;
+  font-size: 14px;
+  transition: 0.3s;
+}
+
+.form-container input[type="text"]:focus,
+.form-container input[type="email"]:focus,
+.form-container input[type="date"]:focus,
+.form-container input[type="color"]:focus {
+  border-color: #ff6f00;
+  outline: none;
+  box-shadow: 0 0 5px #ffb300;
+}
+
+.form-container input[type="submit"] {
+  width: 70%;              /* как и у инпутов */
+  max-width: 300px;
+  padding: 10px;
+  background: #ff6f00;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  margin: 20px auto 0;
+  display: block;          /* центрирование */
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: bold;
+  transition: background 0.3s;
+}
+
+.form-container input[type="submit"]:hover {
+  background: #e65100;
 }
