--- a/css/name.css
+++ b/css/name.css
@@ -6,8 +6,8 @@ body{
     background-color: #D6A99D;
 }
 
-.page{
-    max-width: 1200px;
+#page{
+    max-width: 1000px;
     margin: auto;
     padding: 20px;
     background-color: #F5F5F5;
@@ -89,14 +89,7 @@ body{
     color: #007BFF; 
 }
 
-#myhobbis h2, .my-schedule h2, .my-favorite-sites h2{
-    text-align: center;
-    color: #1d201f;
-    margin-bottom: 20px;
-}
-
-
-.my-hobbies h2 , .my-favorite-sites h2{
+#myhobbies h2 , .my-favorite-sites h2{
     color: #333;
     text-align: center;
     margin-bottom: 15px;
@@ -115,7 +108,6 @@ body{
     border-radius: 8px;
     transition: transform 0.2s, background-color 0.2s;
 }
-
 
 .hobby-list li:hover , .favorite-sites li:hover {
     background-color: #b2ebf2;
@@ -166,15 +158,14 @@ body{
     font-weight: bold;
 }
 
-.schedule-table tr:nth-child(even) {
+.schedule-table tr:nth-child(odd) {
     background-color: #F5EFE6; 
 }
 
-.schedule-table tr:hover {
+/* .schedule-table tr:hover {
     background-color: #cce5ff; 
     cursor: pointer;
-}
-
+} */
 
 .sites-forms {
   background: #fff8e1;
@@ -183,20 +174,13 @@ body{
   max-width: 450px;
   margin: 20px auto;
   box-shadow: 0 5px 15px rgba(0,0,0,0.15);
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
 }
 
 .form-container h1 {
   text-align: center;
   margin-bottom: 20px;
   color: #ff6f00;
-}
-
-.form-container label {
-  display: block;
-  margin-bottom: 12px;
-  font-weight: bold;
-  color: #444;
 }
 
 .form-container input[type="text"],
@@ -240,5 +224,5 @@ body{
 }
 
 .form-container input[type="submit"]:hover {
-  background: #e65100;
+  background: darkcyan;
 }
