--- a/css/name.css
+++ b/css/name.css
@@ -113,7 +113,7 @@ body{
     animation: pulse 2s infinite;
 }
 
-@keyframes pulse {  /*ПРИКОЛЛЛ */
+@keyframes pulse {  /*chatgpt */
     0% { transform: scale(1); }
     50% { transform: scale(1.1); }
     100% { transform: scale(1); }
