--- a/css/secondPageCss.css
+++ b/css/secondPageCss.css
@@ -54,10 +54,7 @@ body {
 
 .grid-layout {
   display: grid;
-  grid-template-areas:
-    "header header"
-    "sidebar main"
-    "footer footer";
+  grid-template-areas: "header header" "sidebar main" "footer footer";
   grid-template-columns: 1fr 3fr;
   grid-template-rows: auto 1fr auto;
   gap: 15px;
